feat: support chained ties on a shared note
- Allow toggling a tie between two notes even when one of them already
  participates in a different tie, so a note can end one tie and start
  another (canToggleTie/toggleTie now use an exact anchor/end match
  instead of an ambiguous overlap check)
- Stop Line.addTie() from coalescing adjacent ties into one wide span;
  each tied pair stays its own arc, even when ties share an endpoint
- Walk the full tie-chain closure when dragging a note or flipping stem
  direction, so every note in a chain moves/flips together, not just
  the immediate tie partner
- Update MusicXML round-trip and writer-output tests/docs to reflect
  that a chain of tie-stop/tie-start pairs now reads back as one Tie
  per adjacent pair

Closes #531